src/org/net9/simplex/ppmc/prop/javacc/PropertyParser.jj
options{  STATIC = false;  SUPPORT_CLASS_VISIBILITY_PUBLIC = false;
  UNICODE_INPUT = true;}PARSER_BEGIN(Parser)package org.net9.simplex.ppmc.prop.javacc;
import java.io.Reader;
import java.io.StringReader;

import org.net9.simplex.ppmc.prop.*;
@SuppressWarnings("all")
public class Parser{
  public Parser ()  {    this((Reader)null);  }
  public StateProperty parse(String s) throws java.text.ParseException  {
    this.ReInit(new StringReader(s));    try {      StateProperty p = this.start();      return p;    } catch (ParseException e) {      throw new PropertyParseException(e);    } catch (TokenMgrError e) {      throw new PropertyParseException(e);    } finally    {      this.ReInit((Reader)null);    }  }}PARSER_END(Parser)TOKEN :{  < #SPACE : [" ", "\r", "\t", "\n"] >
| < DELIM : (<SPACE >)+ >
}
TOKEN :
{
  < NOT : "!" >
| < AND : "/\\" | "&&" >
| < OR : "\\/" | "||" >
| < TRUE : "true" >
| < FALSE : "false" >
| < PROB : "P" >
}TOKEN : {  < NEXT : "X" >| < EVENTUALLY : "<>" >| < ALWAYS : "[]" >| < UNTIL : "U" >}TOKEN :{  < COMP : "<=" | "<" | ">=" |">" >
| <#DIGIT : ["0" - "9"] >
| <INTEGER : (<DIGIT>)+ >
| <FLOAT : (<DIGIT>)* "." (<DIGIT>)+>
| <IDENT : ["A" - "Z", "a" -"z", "_"](["A" - "Z", "a" -"z" ,"0"-"9", "_"])* >}

StateProperty start() :{  StateProperty p;
}{
  [<DELIM >]
  p = stateFormula()
  [<DELIM >]
  {    return p;  }}

StateProperty stateFormula() :
{
  StateProperty p1,p2;  PropOr p = null;
}
{
  p1 = stateTerm()
  (      LOOKAHEAD(2)	  [< DELIM >] < OR > [< DELIM >]
	  p2 = stateTerm()
	  {
	    if (p==null) {	    	p = new PropOr(p1,p2);	    	p1 = p;	    }	    else {	    	p.item.add(p2);	    }
	  }
  )*
  {    return p1;
  }
}
StateProperty stateTerm() :
{
  StateProperty p1,p2;  PropAnd p = null;}
{
  p1 = stateElement()  (    LOOKAHEAD(2)    [< DELIM >] < AND > [< DELIM >]
    p2 = stateElement()
  {  	if (p==null) {  		p = new PropAnd(p1,p2);  		p1 = p;  	} else {  		p.item.add(p2);  	}
  }
  )*
  {    return p1;
  }}
StateProperty stateElement() :
{
  StateProperty p;
  Token t;
}
{ 
  "(" [< DELIM >]
  p = stateFormula()
  [< DELIM >] ")"
  { return p; }
| < TRUE >
  {
    return new PropTrue();
  }
| t = < IDENT >
  {
	return new PropAtom(t.image);
  } | "{" [<DELIM>]  t = <INTEGER>  {    PropSet ps = new PropSet();    ps.item.add(Integer.parseInt(t.image));  }  (  LOOKAHEAD(2)  [<DELIM>] "," [<DELIM>]  t = <INTEGER>  {    ps.item.add(Integer.parseInt(t.image));  }  )* [<DELIM >] "}"  {    return ps;  }| < PROB > [<DELIM >]  t = < COMP >  {    String comparator = t.image;    PathProperty path;  }  [<DELIM >] (    t = < FLOAT >    |    t = < INTEGER >  )  {    double prob = Double.parseDouble(t.image);  }  [<DELIM >] "("  [<DELIM >]  path = pathFormula()  [<DELIM >] ")"  {    return new PropProb(path, comparator, prob);  }}PathProperty pathFormula():{  StateProperty p1,p2;  Token t;}{  < EVENTUALLY > [<DELIM >]  p1 =stateFormula()  {    return new PropEventually(p1);  }| < ALWAYS > [<DELIM >]  p1 =stateFormula()  {    return new PropAlways(p1);  }|  < NEXT > [<DELIM >]  p1 = stateFormula()  {    return new PropNext(p1);  }|  p1 = stateFormula()  [<DELIM >] < UNTIL >  {    boolean bounded = false;    int bound = 0;  }  [<DELIM >]  [ t = < COMP >    {      if (!t.image.equals("<")) throw generateParseException();    }    [<DELIM >]	t = < INTEGER >	{	  bounded = true;	  bound = Integer.parseInt(t.image);	}	[<DELIM >]  ]  p2 = stateFormula()  {     if (bounded)     {       return new PropBoundedUntil(p1,p2,bound);     } else     {       return new PropUntil(p1,p2);     }  }}
